...
                                <rect key="frame" x="0.0" y="757" width="393" height="61"/>
                                <color key="backgroundColor" systemColor="systemTealColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="61" id="lal-NA-kiv"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="LoginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FkO-Rd-g7q"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⚡️FlashChat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udN-Mp-YnP" customClass="CLTypingLabel" customModule="CLT
                                <rect key="frame" x="52" y="396" width="289" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="zOZ-ka-9PD"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="45"/>
                                <color key="textColor" name="BrandBlue"/>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bz7-88-Af4" userLabel="EmailView">
                                <rect key="frame" x="0.0" y="59" width="393" height="177"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="EA7-5Y-UIh">
                                        <rect key="frame" x="0.0" y="20" width="393" height="137"/>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zda-OD-VYI">
                                        <rect key="frame" x="48" y="50" width="297" height="45"/>
                                        <color key="textColor" name="BrandBlue"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
...
                                            <action selector="registereButtonTapped:" destination="cBs-Ny-NK9" eventType="touchUpInside" id="u9F-Zk-NIs"/>
                                        </connections>
                                    </button>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="J9l-pj-rDz">
                                        <rect key="frame" x="0.0" y="20" width="393" height="137"/>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wH3-01-tPV">
                                        <rect key="frame" x="49" y="50" width="296" height="45"/>
                                        <color key="textColor" name="BrandBlue"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                </subviews>
...
