...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.dataSource = self
        tableView.delegate = self
        title = K.appName
        let logout = UIBarButtonItem(title: "Logout", style: .plain,target: self, action: #selector(logoutButtonTapped))
        self.navigationItem.rightBarButtonItem = logout
        self.navigationItem.hidesBackButton = true
        tableView.register(UINib(nibName: K.cellNibName, bundle: nil), forCellReuseIdentifier: K.cellIdentifier)
        fetch()
    }

...
